2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* soxwrap/configure.in: Fix autoconf warnings.

0.11

2010-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.in: Remove bundled libltdl, use system-installed libltdl.

2009-12-07  Mr. Sam  <mrsam@courier-mta.com>

	* system.in: Add noproxy 0.0.0.0 to the default config file.

2009-12-06  Mr. Sam  <mrsam@courier-mta.com>

	* Use native dlsym(RTLD_NEXT) instead of ltdl to locate real system
	functions.

0.10

2009-11-21  Mr. Sam  <mrsam@courier-mta.com>

	* system (noproxy): Add "noproxy ::1", the noproxy directive for
	the IPv6 loopback address, to the default $sysconfdir/socksrc/system
	file.

0.09

2009-06-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Various compilation fixes for gcc 4.4 and libtool 2.2

0.08

2007-07-26  Mr. Sam  <mrsam@courier-mta.com>

	* COPYING: Updated to GPL 3.

2007-07-01  Mr. Sam  <sam@email-scan.com>

	* courier-sox.lpspec.in: Updated PAM config file for Fedora 7.

2007-06-30  Mr. Sam  <sam@email-scan.com>

	* Makefile.am: Drop the automake.fix hack.

2007-04-05  Mr. Sam  <mrsam@courier-mta.com>

	* Update man pages and documentation to Docbook XML V4.4

0.07

2006-10-28  Mr. Sam  <mrsam@courier-mta.com>

	* sockd.c (reply): Fix bug.

2006-04-15  Mr. Sam  <mrsam@courier-mta.com>

	* sockd.c (proxycopy): Fix error recovery from a closed socket.

	* all: Fix compiler warnings.

2006-01-22  Mr. Sam  <mrsam@courier-mta.com>

	* configure.in: Fix libtool 1.9 breakage.

	* Makefile.am: Ditto

	* courier-sox spec file (BuildRequires): Demand /usr/include/ltdl.h

	* courier-sox.spec.in (Requires): Fix for RPM 4.4

	* sox.c (real_select): Fix compiler warning.

2006-01-10  Mr. Sam  <mrsam@courier-mta.com>

	* mkbl4.in: Send progress indication to stderr.

2006-01-02  Mr. Sam  <mrsam@courier-mta.com>

	* mkbl4/sockd.c: Added blacklist support.

2005-08-01  Mr. Sam  <mrsam@courier-mta.com>

	* sox.c (try_next_server_ip): Fix some IPv6-related bugs.

0.06
