@@ -1,3 +1,7 @@
+2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* courier-sox.spec.in: switch to systemd.
+
 2011-05-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* soxwrap/configure.in: Fix autoconf warnings.
